--- a/index.html
+++ b/index.html
@@ -3,34 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beats & Rhymes Player</title> <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <title>The Concrete Jungle Jams</title> <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600;700&display=swap" rel="stylesheet"> <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="music.png" /> </head>
 <body>
 
     <aside class="sidebar">
         <h2 class="sidebar-title">
-            <i class="fa fa-compact-disc sidebar-icon"></i> Müzikler
-            <span id="songCountDesktop" class="song-count-desktop">0 Şarkı</span>
+            <i class="fa fa-bars sidebar-icon"></i> Tracks
+             <span id="songCountDesktop" class="song-count-desktop">0 Songs</span>
         </h2>
         <div id="musicListDesktop" class="music-list-desktop">
-            </div>
+            <p class="loading-message">Loading tracks...</p> </div>
     </aside>
 
     <main class="main-content">
 
         <button id="adminButton" class="admin-button">
-            <i class="fa fa-lock"></i>
-        </button>
+            <i class="fa fa-user-lock"></i> </button>
 
         <div id="player" class="player-container">
-            <img id="coverImage" src="https://placehold.co/400x400/111/555?text=M%C3%BCzik+Se%C3%A7in" alt="Albüm Kapağı" class="cover-image"/>
-            <h3 id="currentSongTitle" class="current-song-title">Müzik Seçin</h3>
-            <p id="currentArtist" class="current-artist"></p> <audio id="audioPlayer"></audio>
+            <img id="coverImage" src="https://placehold.co/400x400/333/777?text=Select+a+Track" alt="Albüm Kapağı" class="cover-image"/>
+            <div class="track-info">
+                <h3 id="currentSongTitle" class="current-song-title">Select a Track</h3>
+                <p id="currentArtist" class="current-artist"></p>
+            </div>
+
+
+            <audio id="audioPlayer"></audio>
 
             <div class="custom-player-controls">
                 <div class="time-info">
@@ -40,15 +44,13 @@
                  <input type="range" id="seekBar" value="0" class="seek-bar">
 
                 <div class="player-buttons">
-                    <button id="prevBtn" class="player-button" aria-label="Önceki Şarkı" disabled>
-                        <i class="fa fa-backward-step"></i>
-                    </button>
+                    <button id="prevBtn" class="player-button" aria-label="Previous Track" disabled>
+                        <i class="fa fa-backward"></i> </button>
                     <button id="playPauseBtn" class="play-pause-button">
                         <i class="fa fa-play"></i>
                     </button>
-                    <button id="nextBtn" class="player-button" aria-label="Sonraki Şarkı" disabled>
-                        <i class="fa fa-forward-step"></i>
-                    </button>
+                    <button id="nextBtn" class="player-button" aria-label="Next Track" disabled>
+                        <i class="fa fa-forward"></i> </button>
                 </div>
 
                 <div class="volume-controls">
@@ -64,9 +66,9 @@
             <button id="closeMobileListBtn" class="modal-close-button">
                 <i class="fa fa-times"></i>
             </button>
-             <h2 class="modal-title"><i class="fa fa-compact-disc sidebar-icon"></i> Müzikler</h2>
+             <h2 class="modal-title"><i class="fa fa-bars sidebar-icon"></i> Tracks</h2>
              <div id="musicListMobile" class="music-list-mobile">
-                 </div>
+                 <p class="loading-message">Loading tracks...</p> </div>
         </div>
     </div>
 
@@ -77,47 +79,32 @@
                 <i class="fa fa-times"></i>
             </button>
 
-            <h2 class="modal-title"><i class="fa fa-user-shield sidebar-icon"></i> Admin Paneli</h2>
-
-             <div id="loginForm" class="auth-form">
-                 <p class="form-label">Giriş Yapın</p>
-                 <input type="email" id="authEmail" placeholder="Email" class="text-input">
-                 <input type="password" id="authPass" placeholder="Şifre" class="text-input">
-                 <button id="signInBtn" class="auth-button primary">
-                     <i class="fa fa-sign-in-alt"></i> Giriş Yap
-                 </button>
+            <h2 class="modal-title"><i class="fa fa-user-shield sidebar-icon"></i> Admin Console</h2> <div id="loginForm" class="auth-form">
+                 <p class="form-label">Sign In</p> <input type="email" id="authEmail" placeholder="Email" class="text-input">
+                 <input type="password" id="authPass" placeholder="Password" class="text-input"> <button id="signInBtn" class="auth-button primary">
+                     <i class="fa fa-sign-in-alt"></i> Sign In </button>
                  </div>
 
             <div id="adminControls" class="admin-controls">
                 <p id="loggedInUserEmail" class="logged-in-user"></p>
                  <button id="signOutBtn" class="auth-button danger small">
-                     <i class="fa fa-sign-out-alt"></i> Çıkış Yap
-                 </button>
+                     <i class="fa fa-sign-out-alt"></i> Sign Out </button>
 
                 <hr class="modal-divider">
 
-                <h3 class="section-title">Müzik Ekle</h3>
-                <input type="text" id="musicName" placeholder="Müzik Adı" class="text-input">
-                 <input type="text" id="artistName" placeholder="Sanatçı Adı (İsteğe Bağlı)" class="text-input"> <label class="file-input-label">Müzik Dosyası (MP3, WAV...):</label>
-                <input type="file" id="musicFile" accept="audio/*" class="file-input">
+                <h3 class="section-title">Add Track</h3> <input type="text" id="musicName" placeholder="Track Title" class="text-input"> <input type="text" id="artistName" placeholder="Artist Name (Optional)" class="text-input"> <label class="file-input-label">Audio File (MP3, WAV...):</label> <input type="file" id="musicFile" accept="audio/*" class="file-input">
 
-                <label class="file-input-label">Kapak Resmi (İsteğe Bağlı):</label>
-                <input type="file" id="musicImage" accept="image/*" class="file-input">
+                <label class="file-input-label">Cover Image (Optional):</label> <input type="file" id="musicImage" accept="image/*" class="file-input">
 
                 <button id="addMusicBtn" class="admin-button primary">
-                    <i class="fa fa-plus"></i> Müziği Ekle
-                </button>
+                    <i class="fa fa-plus"></i> Add Track </button>
 
                 <hr class="modal-divider">
 
-                <h3 class="section-title">Müzik Sil</h3>
-                <label for="deleteSelect" class="form-label">Silinecek Müziği Seç:</label>
-                <select id="deleteSelect" class="select-input">
-                    <option value="" disabled selected>Silmek için seçin...</option>
-                     </select>
+                <h3 class="section-title">Delete Track</h3> <label for="deleteSelect" class="form-label">Select Track to Delete:</label> <select id="deleteSelect" class="select-input">
+                    <option value="" disabled selected>Select to delete...</option> </select>
                 <button id="deleteMusicBtn" class="admin-button danger">
-                    <i class="fa fa-trash"></i> Seçilen Müziği Sil
-                </button>
+                    <i class="fa fa-trash"></i> Delete Selected </button>
             </div>
         </div>
     </div>
