--- a/index.html
+++ b/index.html
@@ -3,89 +3,155 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beat Canvas</title> <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <title>Spotify-Like Player</title> <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="music.png" />
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet"> <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="music.png" /> </head>
 <body>
 
-    <aside class="sidebar">
-        <h2 class="sidebar-title">
-            <i class="fa fa-list"></i> Tracks
-        </h2>
-        <div id="musicListDesktop" class="music-list-desktop">
+    <div class="app-container">
+        <aside class="sidebar">
+            <div class="sidebar-header">
+                <h1 class="app-logo">🎧 Player</h1>
             </div>
-    </aside>
+            <nav class="sidebar-nav">
+                <ul>
+                    <li class="active"><a href="#"><i class="fa fa-list"></i> Müzik Listesi</a></li>
+                </ul>
+            </nav>
+            <div class="sidebar-music-list">
+                 <div class="sidebar-list-header">
+                     <h2>Çalma Listesi</h2>
+                      <span id="songCountDesktop" class="song-count-desktop">0 Şarkı</span>
+                 </div>
 
-    <main class="main-content">
-        <div class="player-effect-container">
-             <div class="effect-layer effect-layer-1"></div>
-             <div class="effect-layer effect-layer-2"></div>
-             <div class="effect-layer effect-layer-3"></div>
+                <div id="musicListDesktop" class="music-list-desktop custom-scrollbar">
+                    <p class="loading-message">Müzikler yükleniyor...</p>
+                </div>
+            </div>
+             <button id="adminButton" class="admin-button">
+                 <i class="fa fa-user-shield"></i> Admin Paneli
+            </button>
+        </aside>
 
+        <main class="main-content custom-scrollbar">
+            <div class="main-header">
+                 <h1>Hoş Geldiniz!</h1>
+                 <p>Dinlemek için bir şarkı seçin.</p>
+            </div>
 
-            <div id="player" class="player-container">
-                <img id="coverImage" src="https://placehold.co/400x400/111/777?text=SELECT+TRACK" alt="Albüm Kapağı" class="cover-image"/>
-                <div class="track-info">
-                    <h3 id="currentSongTitle" class="current-song-title">SELECT TRACK</h3>
-                    <p id="currentArtist" class="current-artist"></p>
+            <div class="player-section">
+                 <div class="cover-art">
+                     <img id="coverImage" src="https://placehold.co/300x300/191414/ffffff?text=Spotify" alt="Albüm Kapağı"/>
+                 </div>
+                 <div class="track-details">
+                     <h3 id="currentSongTitle" class="current-song-title">Şarkı Seçilmedi</h3>
+                     <p id="currentArtist" class="current-artist"></p> </div>
+             </div>
+
+             </main>
+
+        <div class="bottom-player-bar">
+             <div class="track-info-bar">
+                 <img id="coverImageSmall" src="https://placehold.co/50x50/191414/ffffff?text=Spot" alt="Small Cover" class="cover-image-small"/>
+                 <div class="track-details-bar">
+                     <span id="currentSongTitleSmall" class="current-song-title-small">Şarkı Seçilmedi</span>
+                     <span id="currentArtistSmall" class="current-artist-small"></span> </div>
+             </div>
+
+            <div class="player-controls-bar">
+                <audio id="audioPlayer"></audio> <div class="player-buttons-bar">
+                    <button id="prevBtn" class="player-button" aria-label="Önceki Şarkı" disabled>
+                        <i class="fa fa-backward-step"></i>
+                    </button>
+                    <button id="playPauseBtn" class="play-pause-button">
+                        <i class="fa fa-play"></i>
+                    </button>
+                    <button id="nextBtn" class="player-button" aria-label="Sonraki Şarkı" disabled>
+                        <i class="fa fa-forward-step"></i>
+                    </button>
                 </div>
 
-                <audio id="audioPlayer"></audio>
-
-                <div class="custom-player-controls">
-                    <div class="time-info">
-                        <span id="currentTime" class="current-time">0:00</span>
-                        <span id="totalDuration" class="total-duration">0:00</span>
-                    </div>
+                <div class="progress-bar-container">
+                    <span id="currentTime" class="time-span">0:00</span>
                     <input type="range" id="seekBar" value="0" class="seek-bar">
-
-                    <div class="player-buttons">
-                        <button id="prevBtn" class="player-button" aria-label="Previous Track" disabled>
-                            <i class="fa fa-backward-step"></i>
-                        </button>
-                        <button id="playPauseBtn" class="play-pause-button">
-                            <i class="fa fa-play"></i>
-                        </button>
-                        <button id="nextBtn" class="player-button" aria-label="Next Track" disabled>
-                            <i class="fa fa-forward-step"></i>
-                        </button>
-                    </div>
-
-                    <div class="volume-controls">
-                         <i id="volumeIcon" class="fa fa-volume-high volume-icon"></i>
-                        <input type="range" id="volumeBar" min="0" max="1" step="0.01" value="1" class="volume-bar">
-                    </div>
+                    <span id="totalDuration" class="time-span">0:00</span>
                 </div>
+            </div>
+
+            <div class="volume-controls-bar">
+                 <i id="volumeIcon" class="fa fa-volume-high volume-icon"></i>
+                <input type="range" id="volumeBar" min="0" max="1" step="0.01" value="1" class="volume-bar">
             </div>
         </div>
-
-        <button id="adminButton" class="admin-button">
-             <i class="fa fa-cog"></i> Admin
-        </button>
-
-    </main>
-
-    <div id="mobileMusicListModal" class="modal">
-         <div id="mobileMusicListContent" class="modal-content">
-             <button id="closeMobileListBtn" class="modal-close-button"><i class="fa fa-times"></i></button>
-              <h2 class="modal-title">Tracks</h2>
-             <div id="musicListMobile" class="music-list-mobile">
-                 </div>
-         </div>
     </div>
 
-     <div id="adminPanel" class="modal">
-         <div class="modal-content admin-modal-content">
-             <button id="closeAdminPanelBtn" class="modal-close-button"><i class="fa fa-times"></i></button>
-              <h2 class="modal-title">Admin Panel</h2>
 
-              <div id="loginForm" class="auth-form">...</div>
+    <div id="mobileMusicListModal" class="modal">
+        <div id="mobileMusicListContent" class="modal-content">
+            <button id="closeMobileListBtn" class="modal-close-button">
+                <i class="fa fa-times"></i>
+            </button>
+             <h2 class="modal-title">Çalma Listesi</h2>
+             <div id="musicListMobile" class="music-list-mobile custom-scrollbar">
+                 <p class="loading-message">Müzikler yükleniyor...</p>
+             </div>
+        </div>
+    </div>
 
-             <div id="adminControls" class="admin-controls">...</div>
-         </div>
-     </div>
+
+    <div id="adminPanel" class="modal">
+        <div class="modal-content admin-modal-content">
+            <button id="closeAdminPanelBtn" class="modal-close-button">
+                <i class="fa fa-times"></i>
+            </button>
+
+            <h2 class="modal-title">Admin Paneli</h2>
+
+             <div id="loginForm" class="auth-form">
+                 <p class="form-label">Giriş Yapın</p>
+                 <input type="email" id="authEmail" placeholder="Email" class="text-input">
+                 <input type="password" id="authPass" placeholder="Şifre" class="text-input">
+                 <button id="signInBtn" class="auth-button primary">
+                     <i class="fa fa-sign-in-alt"></i> Giriş Yap
+                 </button>
+            </div>
+
+            <div id="adminControls" class="admin-controls">
+                <p id="loggedInUserEmail" class="logged-in-user"></p>
+                 <button id="signOutBtn" class="auth-button danger small">
+                     <i class="fa fa-sign-out-alt"></i> Çıkış Yap
+                 </button>
+
+                <hr class="modal-divider">
+
+                <h3 class="section-title">Müzik Ekle</h3>
+                <input type="text" id="musicName" placeholder="Müzik Adı" class="text-input">
+                 <input type="text" id="artistName" placeholder="Sanatçı Adı (İsteğe Bağlı)" class="text-input">
+
+                <label class="file-input-label">Müzik Dosyası:</label>
+                <input type="file" id="musicFile" accept="audio/*" class="file-input">
+
+                <label class="file-input-label">Kapak Resmi (İsteğe Bağlı):</label>
+                <input type="file" id="musicImage" accept="image/*" class="file-input">
+
+                <button id="addMusicBtn" class="admin-button primary full-width"> <i class="fa fa-plus"></i> Müziği Ekle
+                </button>
+
+                <hr class="modal-divider">
+
+                <h3 class="section-title">Müzik Sil</h3>
+                <label for="deleteSelect" class="form-label">Silinecek Müziği Seç:</label>
+                <select id="deleteSelect" class="select-input">
+                    <option value="" disabled selected>Silmek için seçin...</option>
+                     </select>
+                <button id="deleteMusicBtn" class="admin-button danger full-width"> <i class="fa fa-trash"></i> Seçilen Müziği Sil
+                </button>
+            </div>
+        </div>
+    </div>
 
 
     <script src="script.js"></script>
